# KatalogAI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260415_95de41c35ba8_add_products_fields_hsn_review.py  20260415_986ffd124037_initial.py  20260415_a5f613b1a632_initial.py
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: health.py  ingest.py  jobs.py  products.py  review.py  router.py
app/core/: exceptions.py  logging.py  security.py
app/db/: init_db.py  session.py
app/ml/: confidence.py  ocr.py  text_parser.py  vlm.py
app/ml/agent/: __init__.py  orchestrator.py  prompts.py  tools.py
app/ml/hsn/: embedder.py  reference_data.csv  retriever.py  verifier.py
app/ml/prompts/: extract_product.txt  extract_product_multimodal.txt  verify_hsn.txt
app/models/: __init__.py  api_key.py  hsn_code.py  ingestion_job.py  product.py  product_field.py  review_item.py
app/schemas/: ingest.py  job.py  ondc.py  product.py  review.py
app/services/: ingestion_service.py  review_service.py
app/utils/: images.py
app/workers/: arq_worker.py  tasks.py
docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
scripts/: generate_api_key.py  seed_hsn.py
